Fix id not found message
